lay-out changes - DaisyUI integration

--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body
-    class="flex flex-col justify-center items-center bg-black h-screen w-screen"
-  >
-    <div class="w-96 bg-slate-200 h-[650px] rounded-lg">
-      <div id="root" class="h-full"></div>
-    </div>
+  <body>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
